--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ div.grid-item.enemy {
   background-color: black;
 }
 
-div.grid-item.laser {
+div.grid-item.missile {
   /* backgroun-image:  */
   background-color: red;
 }
