--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ p {
 
 h3 {
   color: red;
+  font-size: 40px;
 }
 
 .instructions {
@@ -106,6 +107,18 @@ div.grid-item.bomb {
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
+}
+
+button {
+  font-size: 20px;
+  background-color: orange;
+  color: white;
+  width: 35%;
+  /* height: 25px; */
+  margin: 5px;
+  padding: 5px;
+  text-align: center;
+  border-radius: 20%;
 }
 
 footer {
